# bitmap

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bmp.c  bmp.h  bmpfont.c  bmpfont.h  hello.c
fonts/: INSTRUCTIONS  bmfont.c  bold.xbm  circuit.xbm  dumpfonts.c  hand.xbm  infocom.xbm  instructions.md  italic.xbm  normal.xbm  small.xbm  smallinv.xbm  thick.xbm  thinsans.xbm  tomthumb.c
ftypefont/: Makefile  ftfont.c  ftfont.h  fttest  fttest.c
ftypefont/lcarsfont/: readme.txt
misc/: bdffont.c  bgichr.h  bm_microui.c  cairoback.c  cp437.c  cp437.h  cp437.xbm  cvrt.c  example.lua  gif.c  gif.h  imgdup.c  kmeans.c  luabmp.c  median_cut.c  nanosvg.c  palette.pal  pbm.c  stretch.c  test.cpp  to_xbm.c  xpm.c
misc/kmeans/: kmeans.c
misc/palette/: Makefile  palette.c
palette/: Makefile  palette.c  palette.txt
pbm/: Makefile  p2.pgm  p3.ppm  p3_2.ppm
